--- a/KoroworldServer-MultiServer/pom.xml
+++ b/KoroworldServer-MultiServer/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.korostudio</groupId>
     <artifactId>KoroworldServer-MultiServer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
